[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprite/atkButton/atkNormal.png" type="Texture" id=1]
[ext_resource path="res://sprite/atkButton/atkHover.png" type="Texture" id=2]
[ext_resource path="res://script/GameManager.gd" type="Script" id=3]
[ext_resource path="res://sprite/atkButton/atkPressed.png" type="Texture" id=4]
[ext_resource path="res://sprite/atkButton/atkDisabled.png" type="Texture" id=5]
[ext_resource path="res://font/L_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://prefab/HeartIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefab/playerAtkLine.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefab/cardManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprite/shieldedHeart.png" type="Texture" id=10]
[ext_resource path="res://sprite/game/bg.png" type="Texture" id=11]
[ext_resource path="res://prefab/Cam.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 577, 442 )

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Cam" parent="." instance=ExtResource( 12 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartIcon" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 19.0
margin_top = 19.0
margin_right = 119.0
margin_bottom = 119.0
texture = ExtResource( 10 )

[node name="HealthText" type="Label" parent="CanvasLayer"]
margin_left = 113.0
margin_top = 39.0
margin_right = 258.0
margin_bottom = 569.7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "10"

[node name="AttackButton" type="TextureButton" parent="."]
margin_left = 433.0
margin_top = 312.0
margin_right = 583.0
margin_bottom = 462.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 5 )

[node name="PlayerAtkLine" parent="." instance=ExtResource( 8 )]
visible = false

[node name="GameArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
shape = SubResource( 1 )

[node name="CardManager" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 350 )
cheatCard = 5

[node name="CheatButton" type="Button" parent="."]
margin_left = 406.0
margin_top = -230.0
margin_right = 469.0
margin_bottom = -210.0
text = "get card"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
position = Vector2( 550, 194 )
scale = Vector2( 1.6, 1.6 )
z_index = -10
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
position = Vector2( -550, 194 )
scale = Vector2( 1.6, 1.6 )
z_index = -10
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
position = Vector2( 1650, 194 )
scale = Vector2( 1.6, 1.6 )
z_index = -10
texture = ExtResource( 11 )

[connection signal="pressed" from="AttackButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CheatButton" to="CardManager" method="_on_Button_pressed"]
